color scheme changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="w-full flex justify-center">
             <a
               href="#"
-              class="font-bold text-xs uppercase mt-2 px-8 py-2 rounded-full bg-pink-100"
+              class="explore-button font-bold text-lg uppercase mt-2 px-8 py-2 rounded-full"
               >Explore</a
             >
           </div>
@@ -53,9 +53,7 @@
         </div>
       </div>
     </header>
-    <main
-      class="pt-16 w-full flex flex-col items-center bg-pink-100 text-center"
-    >
+    <main class="pt-16 w-full flex flex-col items-center text-center">
       <div class="w-full mx-4">
         <h2 class="font-bold sm:text-2xl text-lg mb-4">Main Header Text</h2>
         <p class="text-sm mt-4">main content text</p>
@@ -63,7 +61,9 @@
           Play around with the size of your browser to see the changes that
           occur
         </h2>
-        <p class="text-sm mt-4">main content text</p>
+        <p class="text-sm mt-4">
+          See how the cards change size and how they stack!
+        </p>
 
         <div
           class="card-container flex flex-col sm:flex-row items-center justify-center"
@@ -123,28 +123,28 @@
           <div class="flex flex-col items-center">
             <label for="first_name" class="sr-only">First Name</label>
             <input
-              class="mt-4 form-input bg-gray-400 border-4 rounded-lg py-1 px-4 text-lg w-full"
+              class="mt-4 form-input border-4 rounded-lg py-1 px-4 text-lg w-full"
               type="text"
               placeholder="First Name"
               id="first_name"
             />
             <label for="last_name" class="sr-only">Last Name</label>
             <input
-              class="mt-4 form-input bg-gray-400 border-4 rounded-lg py-1 px-4 text-lg w-full"
+              class="mt-4 form-input border-4 rounded-lg py-1 px-4 text-lg w-full"
               type="text"
               placeholder="Last Name"
               id="last_name"
             />
             <label for="mobile" class="sr-only">Mobile Number</label>
             <input
-              class="mt-4 form-input bg-gray-400 border-4 rounded-lg py-1 px-4 text-lg w-full"
+              class="mt-4 form-input border-4 rounded-lg py-1 px-4 text-lg w-full"
               type="text"
               placeholder="Mobile Number"
               id="mobile"
             />
             <label for="email" class="sr-only">Email</label>
             <input
-              class="mt-4 form-input bg-gray-400 border-4 rounded-lg py-1 px-4 text-lg w-full"
+              class="mt-4 form-input border-4 rounded-lg py-1 px-4 text-lg w-full"
               type="email"
               placeholder="Email"
               id="email"
@@ -153,7 +153,7 @@
         </form>
         <button
           type="button"
-          class="font-bold text-xs uppercase mt-4 px-8 py-2 rounded-full border-4 bg-gray-400"
+          class="font-bold text-xs uppercase mt-4 px-8 py-2 rounded-full border-4"
         >
           Sign Up
         </button>
