--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </form>
         <button
           type="button"
-          class="font-bold text-xs uppercase mt-4 px-8 py-2 rounded-full border-4"
+          class="sign-up font-bold text-xs uppercase mt-4 px-8 py-2 rounded-full border-4"
         >
           Sign Up
         </button>
