fixed explore button on mobile view

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="w-full flex justify-center">
             <a
               href="#"
-              class="explore-button font-bold text-lg uppercase mt-2 px-8 py-2 rounded-full"
+              class="explore-button font-bold sm:text-lg uppercase mt-2 sm:px-8 sm:py-2 rounded-full text-sm px-1 py-2"
               >Explore</a
             >
           </div>
